Merging MainThreadScrollingReason and ScrollingThreadStatus

This CL merges the two metrics because of their similarity. Apart from
that, MainThreadScrollingReason does not collect metrics when a scroller
is composited but still blocked on main thread due to event handlers.

We really care about the reasons that make scrolling slow, so we should
also collect composited but blocking cases and the two similar metrics
can be merged.

Bug: 861754
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I295d94f7ca3892dbfde34e4c61db0d95af92b1fe
Reviewed-on: https://chromium-review.googlesource.com/1226828
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Robert Kaplow (sloooow) <rkaplow@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Reviewed-by: Sahel Sharify <sahel@chromium.org>
Commit-Queue: Xianda Sun <sunxd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594047}
Former-commit-id: 679a7c694a84f31830841baf8e2a034639a51146