cc/input/main_thread_scrolling_reason.h
@@ -60,12 +60,14 @@ struct CC_EXPORT MainThreadScrollingReason {
     kContinuingMainThreadScroll = 1 << 10,
     kNonInvertibleTransform = 1 << 11,
     kPageBasedScrolling = 1 << 12,
+    kWheelEventHandlerRegion = 1 << 23,
+    kTouchEventHandlerRegion = 1 << 24,
 
     // The maximum number of flags in this struct (excluding itself).
     // New flags should increment this number but it should never be decremented
     // because the values are used in UMA histograms. It should also be noted
     // that it excludes the kNotScrollingOnMain value.
-    kMainThreadScrollingReasonCount = 23,
+    kMainThreadScrollingReasonCount = 25,
   };
 
   static const uint32_t kNonCompositedReasons =
@@ -91,7 +93,8 @@ struct CC_EXPORT MainThreadScrollingReason {
     uint32_t reasons_set_by_compositor =
         kNonFastScrollableRegion | kFailedHitTest | kNoScrollingLayer |
         kNotScrollable | kContinuingMainThreadScroll | kNonInvertibleTransform |
-        kPageBasedScrolling;
+        kPageBasedScrolling | kWheelEventHandlerRegion |
+        kTouchEventHandlerRegion;
     return (reasons & reasons_set_by_compositor) == reasons;
   }
 
